examples/test/testpolicy6043.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6043
  namespace: namespace229
spec:
  podSelector:
    matchLabels:
      key34: value32
      key19: value34
      key12: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value27
          key33: value29
          key47: value34
      podSelector:
        matchLabels:
          key27: value32
